--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body>
   <header>
     <h1>Lucid</h1>
-    <p>https://fakecrime.bio/lion.</p>
+    <p>Special thanks to, Burt Cocaine</p>
   </header>
 
   <section class="links">
@@ -94,4 +94,5 @@
   </footer>
 </body>
 </html>
+
 
