--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 <body>
   <header>
     <h1>Lucid</h1>
-    <p>Special thanks to, Burt Cocaine</p>
+    <p>Special thanks to Burt Cocaine</p>
   </header>
 
   <section class="links">
     <a href="#">About</a>
     <a href="#">Projects</a>
     <a href="#">Contact</a>
-    <a href="#">Socials</a>
+    <a href="https://fakecrime.bio/lion">Socials</a>
   </section>
 
   <footer>
@@ -94,5 +94,6 @@
   </footer>
 </body>
 </html>
+
 
 
