--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       box-sizing: border-box;
       font-family: 'Inter', sans-serif;
     }
+
     body {
       background: #0f0f0f;
       color: #f5f5f5;
@@ -20,10 +21,11 @@
       flex-direction: column;
       min-height: 100vh;
       text-align: center;
+      justify-content: center; /* Center content vertically */
     }
 
     header {
-      padding: 4rem 1rem 2rem;
+      margin-bottom: 2rem;
     }
 
     h1 {
@@ -44,7 +46,7 @@
       flex-direction: column;
       gap: 1rem;
       align-items: center;
-      margin-bottom: 4rem;
+      /* Remove margin-bottom to help centering */
     }
 
     .links a {
@@ -94,6 +96,3 @@
   </footer>
 </body>
 </html>
-
-
-
