--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
     <section class="links">
       <a href="#">About</a>
       <a href="#">Projects</a>
-      <a href="#">Contact</a>
+      <a href="https://discord.gg/xgBXgY4TU5">Contact</a>
       <a href="https://fakecrime.bio/lion">Socials</a>
+      <a href="https://steamcommunity.com/id/Kruhl/">Steam</a>
     </section>
   </div>
 
@@ -103,3 +104,4 @@
   </footer>
 </body>
 </html>
+
