--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     }
 
     .centered-content {
-      flex: 1; /* Fill space between header/footer */
+      flex: 1;
       display: flex;
       flex-direction: column;
-      justify-content: center; /* Vertical center */
-      align-items: center;     /* Horizontal center */
+      justify-content: center;
+      align-items: center;
     }
 
     header {
@@ -53,9 +53,10 @@
       flex-direction: column;
       gap: 1rem;
       align-items: center;
+      position: relative;
     }
 
-    .links a {
+    .links a, .dropdown-btn {
       display: inline-block;
       padding: 0.75rem 2rem;
       background: #1a1a1a;
@@ -63,11 +64,42 @@
       text-decoration: none;
       border-radius: 8px;
       transition: background 0.3s, transform 0.2s;
+      cursor: pointer;
     }
 
-    .links a:hover {
+    .links a:hover, .dropdown-btn:hover {
       background: #333;
       transform: scale(1.05);
+    }
+
+    /* Dropdown menu */
+    .dropdown {
+      position: relative;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      top: 100%; /* below the button */
+      left: 50%;
+      transform: translateX(-50%);
+      background: #1a1a1a;
+      border-radius: 8px;
+      flex-direction: column;
+      margin-top: 0.5rem;
+      min-width: 150px;
+      z-index: 10;
+    }
+
+    .dropdown-content a {
+      padding: 0.75rem 1rem;
+      text-align: center;
+      display: block;
+    }
+
+    .dropdown-content a:hover {
+      background: #333;
+      transform: none;
     }
 
     footer {
@@ -79,6 +111,10 @@
     @media (min-width: 768px) {
       .links {
         flex-direction: row;
+      }
+      .dropdown-content {
+        left: 50%;
+        transform: translateX(-50%);
       }
     }
   </style>
@@ -93,15 +129,39 @@
     <section class="links">
       <a href="#">About</a>
       <a href="#">Projects</a>
-      <a href="https://discord.gg/xgBXgY4TU5">Contact</a>
-      <a href="https://fakecrime.bio/lion">Socials</a>
-      <a href="https://steamcommunity.com/id/Kruhl/">Steam</a>
+      <a href="#">Contact</a>
+
+      <!-- Dropdown -->
+      <div class="dropdown">
+        <div class="dropdown-btn">Socials &#x25BC;</div>
+        <div class="dropdown-content">
+          <a href="https://steamcommunity.com/id/Kruhl/" target="_blank">Steam</a>
+          <a href="https://fakecrime.bio/lion" target="_blank">Fakecrime</a>
+        </div>
+      </div>
+
     </section>
   </div>
 
   <footer>
     &copy; 2025 Lucid. All rights reserved.
   </footer>
+
+  <script>
+    // Toggle dropdown on click
+    const dropdownBtn = document.querySelector('.dropdown-btn');
+    const dropdownContent = document.querySelector('.dropdown-content');
+
+    dropdownBtn.addEventListener('click', () => {
+      dropdownContent.style.display = dropdownContent.style.display === 'flex' ? 'none' : 'flex';
+    });
+
+    // Optional: Close dropdown if click outside
+    window.addEventListener('click', (e) => {
+      if (!e.target.matches('.dropdown-btn')) {
+        dropdownContent.style.display = 'none';
+      }
+    });
+  </script>
 </body>
 </html>
-
