--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
     </header>
 
     <section class="links">
-      <a href="#">About</a>
-      <a href="#">Projects</a>
-      <a href="#">Contact</a>
+      <a href="https://rumble.com/user/JackeusVinsonius?e9s=src_v1_clr">#1 rumble streamer</a>
+      <a href="https://www.youtube.com">Youtube</a>
+      <a href="https://discord.gg/xgBXgY4TU5">Contact</a>
 
       <!-- Dropdown -->
       <div class="dropdown">
@@ -165,3 +165,4 @@
   </script>
 </body>
 </html>
+
