--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
     <section class="links">
       <a href="https://rumble.com/user/JackeusVinsonius?e9s=src_v1_clr">#1 rumble streamer</a>
-      <a href="https://www.youtube.com">Youtube</a>
+      <a href="https://noveltyemails.com/fuckyou.com">Youtube</a>
       <a href="https://discord.gg/xgBXgY4TU5">Contact</a>
 
       <!-- Dropdown -->
@@ -165,4 +165,5 @@
   </script>
 </body>
 </html>
+
 
