--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
         <div class="dropdown-content">
           <a href="https://steamcommunity.com/id/Kruhl/" target="_blank">Steam</a>
           <a href="https://fakecrime.bio/lion" target="_blank">Fakecrime</a>
+          <a href="https://guns.lol/scrub" target="_blank">Guns.lol</a>
         </div>
       </div>
 
@@ -165,5 +166,6 @@
   </script>
 </body>
 </html>
+
 
 
