--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
     </header>
 
     <section class="links">
-      <a href="https://rumble.com/user/JackeusVinsonius?e9s=src_v1_clr">#1 rumble streamer</a>
-      <a href="https://noveltyemails.com/fuckyou.com">Youtube</a>
-      <a href="https://discord.gg/xgBXgY4TU5">Contact</a>
+      <a href="https://rumble.com/user/JackeusVinsonius?e9s=src_v1_clr" target="_blank">#1 rumble streamer</a>
+      <a href="https://noveltyemails.com/fuckyou.com" target="_blank">Youtube</a>
+      <a href="https://discord.gg/xgBXgY4TU5" target="_blank">Contact</a>
 
       <!-- Dropdown -->
       <div class="dropdown">
@@ -140,7 +140,6 @@
           <a href="https://guns.lol/scrub" target="_blank">Guns.lol</a>
         </div>
       </div>
-
     </section>
   </div>
 
@@ -157,7 +156,7 @@
       dropdownContent.style.display = dropdownContent.style.display === 'flex' ? 'none' : 'flex';
     });
 
-    // Optional: Close dropdown if click outside
+    // Close dropdown if click outside
     window.addEventListener('click', (e) => {
       if (!e.target.matches('.dropdown-btn')) {
         dropdownContent.style.display = 'none';
@@ -166,6 +165,3 @@
   </script>
 </body>
 </html>
-
-
-
