--- a/cloudy/index.html
+++ b/cloudy/index.html
@@ -122,8 +122,8 @@
 <body>
   <div class="centered-content">
     <header>
-      <h1>Lucid</h1>
-      <p>Special thanks to Burt Cocaine</p>
+      <h1>Cloudy</h1>
+      <p>Nill all kiggers</p>
     </header>
 
     <section class="links">
