--- a/index.html
+++ b/index.html
@@ -102,6 +102,24 @@
       transform: none;
     }
 
+    /* Music button style */
+    #musicBtn {
+      margin-top: 2rem;
+      padding: 0.75rem 1.5rem;
+      background: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 1rem;
+      transition: background 0.3s, transform 0.2s;
+    }
+
+    #musicBtn:hover {
+      background: #45a049;
+      transform: scale(1.05);
+    }
+
     footer {
       padding: 2rem 1rem;
       font-size: 0.9rem;
@@ -141,6 +159,9 @@
         </div>
       </div>
     </section>
+
+    <!-- Music button -->
+    <button id="musicBtn">Play Music</button>
   </div>
 
   <footer>
@@ -167,6 +188,21 @@
     const allLinks = document.querySelectorAll('a');
     allLinks.forEach(link => {
       link.setAttribute('target', '_blank');
+    });
+
+    // Music playback
+    const audio = new Audio('music.mp3'); // your music file in repo
+    audio.loop = true; // loop the music
+    const musicBtn = document.getElementById('musicBtn');
+
+    musicBtn.addEventListener('click', () => {
+      if (audio.paused) {
+        audio.play();
+        musicBtn.textContent = 'Pause Music';
+      } else {
+        audio.pause();
+        musicBtn.textContent = 'Play Music';
+      }
     });
   </script>
 </body>
