--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lucid</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    /* Reset & basic styles */
+    /* Base Reset */
     * {
       margin: 0;
       padding: 0;
@@ -15,36 +15,33 @@
     }
 
     body {
-      background: #0f0f0f;
-      color: #f5f5f5;
+      background: #0d0d0d;
+      color: #eaeaea;
       display: flex;
       flex-direction: column;
       min-height: 100vh;
-      text-align: center;
     }
 
-    .centered-content {
+    .container {
       flex: 1;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      padding: 2rem;
+      text-align: center;
     }
 
-    header {
-      margin-bottom: 2rem;
-    }
-
-    h1 {
+    header h1 {
       font-size: 3rem;
       font-weight: 700;
-      margin-bottom: 1rem;
+      margin-bottom: 0.5rem;
       color: #fff;
     }
 
-    p {
-      font-size: 1.2rem;
-      color: #ccc;
+    header p {
+      font-size: 1rem;
+      color: #aaa;
       margin-bottom: 2rem;
     }
 
@@ -52,42 +49,40 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      align-items: center;
-      position: relative;
+      margin-bottom: 2rem;
     }
 
     .links a, .dropdown-btn {
-      display: inline-block;
-      padding: 0.75rem 2rem;
+      padding: 0.75rem 1.5rem;
       background: #1a1a1a;
-      color: #fff;
-      text-decoration: none;
+      color: #f5f5f5;
       border-radius: 8px;
-      transition: background 0.3s, transform 0.2s;
-      cursor: pointer;
+      text-decoration: none;
+      transition: all 0.3s ease;
     }
 
     .links a:hover, .dropdown-btn:hover {
-      background: #333;
-      transform: scale(1.05);
+      background: #2a2a2a;
+      transform: translateY(-2px);
     }
 
-    /* Dropdown menu */
+    /* Dropdown */
     .dropdown {
       position: relative;
     }
 
     .dropdown-content {
       display: none;
-      position: absolute;
-      top: 100%; /* below the button */
-      left: 50%;
-      transform: translateX(-50%);
+      flex-direction: column;
       background: #1a1a1a;
       border-radius: 8px;
-      flex-direction: column;
       margin-top: 0.5rem;
-      min-width: 150px;
+      padding: 0.5rem 0;
+      position: absolute;
+      top: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      min-width: 160px;
       z-index: 10;
     }
 
@@ -95,70 +90,64 @@
       padding: 0.75rem 1rem;
       text-align: center;
       display: block;
+      color: #eaeaea;
     }
 
     .dropdown-content a:hover {
-      background: #333;
-      transform: none;
+      background: #2a2a2a;
     }
 
-    /* Music buttons */
+    /* Music controls */
     .music-controls {
-      margin-top: 2rem;
       display: flex;
-      flex-direction: column;
       gap: 1rem;
-      align-items: center;
+      flex-wrap: wrap;
     }
 
     .music-controls button {
-      padding: 0.75rem 1.5rem;
+      padding: 0.75rem 1.25rem;
       background: #4CAF50;
-      color: white;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
+      color: #fff;
+      font-size: 0.95rem;
       cursor: pointer;
-      font-size: 1rem;
-      transition: background 0.3s, transform 0.2s;
+      transition: all 0.3s ease;
     }
 
     .music-controls button:hover {
-      background: #45a049;
-      transform: scale(1.05);
+      background: #43a047;
+      transform: translateY(-2px);
     }
 
     footer {
-      padding: 2rem 1rem;
-      font-size: 0.9rem;
-      color: #777;
+      text-align: center;
+      padding: 1.5rem;
+      font-size: 0.85rem;
+      color: #666;
     }
 
     @media (min-width: 768px) {
       .links {
         flex-direction: row;
       }
-      .dropdown-content {
-        left: 50%;
-        transform: translateX(-50%);
-      }
     }
   </style>
 </head>
 <body>
-  <div class="centered-content">
+  <div class="container">
     <header>
       <h1>Lucid</h1>
       <p>Special thanks to Burt Cocaine</p>
     </header>
 
     <section class="links">
-      <a href="https://rumble.com/user/JackeusVinsonius?e9s=src_v1_clr">#1 rumble streamer</a>
-      <a href="https://noveltyemails.com/fuckyou.com">Youtube</a>
+      <a href="https://rumble.com/user/JackeusVinsonius?e9s=src_v1_clr">Rumble</a>
+      <a href="https://noveltyemails.com/fuckyou.com">YouTube</a>
       <a href="https://discord.gg/xgBXgY4TU5">Contact</a>
 
-      <!-- Dropdown -->
       <div class="dropdown">
-        <div class="dropdown-btn">Socials &#x25BC;</div>
+        <div class="dropdown-btn">Socials ▾</div>
         <div class="dropdown-content">
           <a href="https://steamcommunity.com/id/Kruhl/">Steam</a>
           <a href="https://fakecrime.bio/lion">Fakecrime</a>
@@ -167,10 +156,9 @@
       </div>
     </section>
 
-    <!-- Music controls -->
     <div class="music-controls">
-      <button id="music1Btn">We'll let you know</button>
-      <button id="music2Btn">Passin me by</button>
+      <button id="music1Btn">We’ll Let You Know</button>
+      <button id="music2Btn">Passin’ Me By</button>
     </div>
   </div>
 
@@ -179,7 +167,6 @@
   </footer>
 
   <script>
-    // Toggle dropdown on click
     const dropdownBtn = document.querySelector('.dropdown-btn');
     const dropdownContent = document.querySelector('.dropdown-content');
 
@@ -187,21 +174,16 @@
       dropdownContent.style.display = dropdownContent.style.display === 'flex' ? 'none' : 'flex';
     });
 
-    // Close dropdown if click outside
     window.addEventListener('click', (e) => {
-      if (!e.target.matches('.dropdown-btn')) {
+      if (!e.target.closest('.dropdown')) {
         dropdownContent.style.display = 'none';
       }
     });
 
-    // Open all links in new tab
-    const allLinks = document.querySelectorAll('a');
-    allLinks.forEach(link => link.setAttribute('target', '_blank'));
+    document.querySelectorAll('a').forEach(link => link.setAttribute('target', '_blank'));
 
-    // Music playback
     const music1 = new Audio('music.mp3');
     const music2 = new Audio('music2.mp3');
-
     music1.loop = true;
     music2.loop = true;
 
