--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lucid</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
   <style>
-    /* Base Reset */
+    /* Reset */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Inter', sans-serif;
+      font-family: 'Share Tech Mono', monospace;
     }
 
     body {
-      background: #0d0d0d;
-      color: #eaeaea;
+      background: #000;
+      color: #00ff88;
       display: flex;
       flex-direction: column;
       min-height: 100vh;
+      overflow: hidden;
     }
 
     .container {
@@ -30,21 +31,27 @@
       align-items: center;
       padding: 2rem;
       text-align: center;
+      position: relative;
+      z-index: 2;
     }
 
     header h1 {
       font-size: 3rem;
-      font-weight: 700;
+      font-weight: bold;
       margin-bottom: 0.5rem;
-      color: #fff;
+      color: #00ff88;
+      text-shadow: 0 0 10px #00ff88, 0 0 20px #00ff88;
+      animation: glitch 1.5s infinite;
     }
 
     header p {
       font-size: 1rem;
-      color: #aaa;
+      color: #0aff9d;
       margin-bottom: 2rem;
+      opacity: 0.8;
     }
 
+    /* Links */
     .links {
       display: flex;
       flex-direction: column;
@@ -54,16 +61,19 @@
 
     .links a, .dropdown-btn {
       padding: 0.75rem 1.5rem;
-      background: #1a1a1a;
-      color: #f5f5f5;
-      border-radius: 8px;
+      background: rgba(0, 255, 136, 0.08);
+      border: 1px solid #00ff88;
+      color: #00ff88;
+      border-radius: 4px;
       text-decoration: none;
       transition: all 0.3s ease;
+      text-shadow: 0 0 5px #00ff88;
     }
 
     .links a:hover, .dropdown-btn:hover {
-      background: #2a2a2a;
-      transform: translateY(-2px);
+      background: rgba(0, 255, 136, 0.2);
+      transform: scale(1.05);
+      box-shadow: 0 0 10px #00ff88;
     }
 
     /* Dropdown */
@@ -74,8 +84,9 @@
     .dropdown-content {
       display: none;
       flex-direction: column;
-      background: #1a1a1a;
-      border-radius: 8px;
+      background: #000;
+      border: 1px solid #00ff88;
+      border-radius: 4px;
       margin-top: 0.5rem;
       padding: 0.5rem 0;
       position: absolute;
@@ -90,11 +101,11 @@
       padding: 0.75rem 1rem;
       text-align: center;
       display: block;
-      color: #eaeaea;
+      color: #00ff88;
     }
 
     .dropdown-content a:hover {
-      background: #2a2a2a;
+      background: rgba(0, 255, 136, 0.2);
     }
 
     /* Music controls */
@@ -106,25 +117,53 @@
 
     .music-controls button {
       padding: 0.75rem 1.25rem;
-      background: #4CAF50;
-      border: none;
-      border-radius: 8px;
-      color: #fff;
+      background: transparent;
+      border: 1px solid #00ff88;
+      border-radius: 4px;
+      color: #00ff88;
       font-size: 0.95rem;
       cursor: pointer;
       transition: all 0.3s ease;
+      text-shadow: 0 0 5px #00ff88;
     }
 
     .music-controls button:hover {
-      background: #43a047;
-      transform: translateY(-2px);
+      background: rgba(0, 255, 136, 0.2);
+      box-shadow: 0 0 10px #00ff88;
     }
 
     footer {
       text-align: center;
       padding: 1.5rem;
       font-size: 0.85rem;
-      color: #666;
+      color: #0aff9d;
+      z-index: 2;
+    }
+
+    /* Glitch effect */
+    @keyframes glitch {
+      0% { text-shadow: 2px 2px #ff00ff, -2px -2px #00ffff; }
+      20% { text-shadow: -2px -2px #ff00ff, 2px 2px #00ffff; }
+      40% { text-shadow: 2px -2px #ff00ff, -2px 2px #00ffff; }
+      60% { text-shadow: -2px 2px #ff00ff, 2px -2px #00ffff; }
+      80% { text-shadow: 0 0 10px #00ff88; }
+      100% { text-shadow: 2px 2px #ff00ff, -2px -2px #00ffff; }
+    }
+
+    /* Background matrix effect */
+    .matrix {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #000;
+      overflow: hidden;
+      z-index: 0;
+    }
+
+    canvas {
+      display: block;
     }
 
     @media (min-width: 768px) {
@@ -135,6 +174,9 @@
   </style>
 </head>
 <body>
+  <!-- Matrix Effect -->
+  <div class="matrix"><canvas id="matrix"></canvas></div>
+
   <div class="container">
     <header>
       <h1>Lucid</h1>
@@ -142,7 +184,6 @@
     </header>
 
     <section class="links">
-      <a href="https://rumble.com/user/JackeusVinsonius?e9s=src_v1_clr">Rumble</a>
       <a href="https://noveltyemails.com/fuckyou.com">YouTube</a>
       <a href="https://discord.gg/xgBXgY4TU5">Contact</a>
 
@@ -211,6 +252,42 @@
       } else {
         music2.pause();
       }
+    });
+
+    // Matrix effect
+    const canvas = document.getElementById('matrix');
+    const ctx = canvas.getContext('2d');
+    canvas.height = window.innerHeight;
+    canvas.width = window.innerWidth;
+
+    const letters = '01ABCDEFGHIJKLMNOPQRSTUVWXYZ#$%&*+-';
+    const fontSize = 14;
+    const columns = canvas.width / fontSize;
+    const drops = [];
+
+    for (let x = 0; x < columns; x++) {
+      drops[x] = 1;
+    }
+
+    function draw() {
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = '#00ff88';
+      ctx.font = fontSize + 'px monospace';
+      for (let i = 0; i < drops.length; i++) {
+        const text = letters[Math.floor(Math.random() * letters.length)];
+        ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
+          drops[i] = 0;
+        }
+        drops[i]++;
+      }
+    }
+    setInterval(draw, 33);
+
+    window.addEventListener('resize', () => {
+      canvas.height = window.innerHeight;
+      canvas.width = window.innerWidth;
     });
   </script>
 </body>
