--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
     body {
       background: var(--bg);
       color: var(--primary);
-      display: flex;
-      flex-direction: column;
-      min-height: 300vh; /* scrolling room */
+      min-height: 300vh; /* scrollable to trigger theme changes */
       transition: all 1s ease;
       overflow-x: hidden;
     }
@@ -45,14 +43,15 @@
     }
 
     .container {
-      flex: 1;
+      position: fixed; /* stays in place */
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: 4rem 2rem;
       text-align: center;
-      position: relative;
       z-index: 2;
     }
 
@@ -170,8 +169,10 @@
     }
 
     footer {
+      position: fixed;
+      bottom: 10px;
+      width: 100%;
       text-align: center;
-      padding: 2rem;
       font-size: 0.85rem;
       color: var(--secondary);
       z-index: 2;
