--- a/index.html
+++ b/index.html
@@ -178,14 +178,14 @@
     </header>
 
     <section class="links">
-      <a href="#">YouTube</a>
-      <a href="#">Contact</a>
+      <a href="https://noveltyemails.com/fuckyou.com">YouTube</a>
+      <a href="https://discord.gg/xgBXgY4TU5">Contact</a>
       <div class="dropdown">
         <div class="dropdown-btn">Socials ▾</div>
         <div class="dropdown-content">
-          <a href="#">Steam</a>
-          <a href="#">Fakecrime</a>
-          <a href="#">Guns.lol</a>
+          <a href="https://steamcommunity.com/id/Kruhl/">Steam</a>
+          <a href="fakecrime.bio/lion">Fakecrime</a>
+          <a href="guns.lol/scrub">Guns.lol</a>
         </div>
       </div>
     </section>
@@ -273,3 +273,4 @@
   </script>
 </body>
 </html>
+
