--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="dropdown-content">
           <a href="https://steamcommunity.com/id/Kruhl/">Steam</a>
           <a href="fakecrime.bio/lion">Fakecrime</a>
-          <a href="guns.lol/scrub">Guns.lol</a>
+          <a href="www.guns.lol/scrub">Guns.lol</a>
         </div>
       </div>
     </section>
@@ -273,4 +273,5 @@
   </script>
 </body>
 </html>
+
 
