--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
       <div class="dropdown">
         <div class="dropdown-btn">Socials ▾</div>
         <div class="dropdown-content">
-          <a href="https://steamcommunity.com/id/Kruhl/">Steam</a>
-          <a href="fakecrime.bio/lion">Fakecrime</a>
-          <a href="www.guns.lol/scrub">Guns.lol</a>
+            <a href="https://steamcommunity.com/id/Kruhl/">Steam</a>
+            <a href="https://fakecrime.bio/lion">Fakecrime</a>
+            <a href="https://guns.lol/scrub">Guns.lol</a>
         </div>
       </div>
     </section>
@@ -273,5 +273,6 @@
   </script>
 </body>
 </html>
+
 
 
